--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:XvpPVZrCMwoL3EAff11rEhZQ0fGx+jbp/FzqkqE2ci8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=adaenterprise_db
+DB_USERNAME=adaenterprise
+DB_PASSWORD=A83vFX3C82RmkpK
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
